--- a/app/app.component.html
+++ b/app/app.component.html
@@ -9,9 +9,9 @@
         <!--<button type="submit">Добавить</button>-->
     <!--</form>-->
 
-    <form class="todo-form" (ngSubmit)="create(); titleInput.value = ''">
-        <input type="text" name="title" [(ngModel)]="newTodoTitle" placeholder="Что нужно сделать?" required>{{newTodoTitle}}
-        <button type="submit">Добавить</button>
+    <form class="todo-form" (ngSubmit)="create(); todoForm.reset()" #todoForm="ngForm">
+        <input type="text" name="title" [(ngModel)]="newTodoTitle" placeholder="Что нужно сделать?" required>
+        <button type="submit" [disabled]="todoForm.form.invalid">Добавить</button>
     </form>
 
     <section class="todo-list" *ngIf="todos.length">
