10 - Сервисы( не работает выполнение)

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -4,7 +4,7 @@
 </header>
 
 <main>
-    <todo-form (add)="create($event)"></todo-form>
+    <todo-form></todo-form>
 
-    <todo-list [todos]="todos"></todo-list>
+    <todo-list></todo-list>
 </main>
